src/client/app.css
.body {
  background-color: white;
  margin-bottom: 20px;
}

@media only screen and (max-width: 999px) {
  .page-content {
    width: 100% !important;
  }
  .container-fluid {
    height: 100% !important;
    width: 100% !important;
    margin: 0px !important;
    padding-left: 0px !important;
    padding-right: 0px !important;
    border: 1px solid black;
    border-color: black;
    border-width: 0px;
    border-radius: 10px;
  }
  .sidebar {
    height: auto;
    border: 1px solid black;
    border-color: black;
    border-width: 0px;
    border-radius: 10px;
    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
  }

  .create-modal {
    position: absolute;
    top: 15vh;
    left: 7vw;
    right: 7vw;
    bottom: 15vh;
    background-color: White;
    border: 1px solid black;
    border-color: black;
    border-width: 0px;
    border-radius: 10px;
    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
  }
}

@media only screen and (min-width: 1000px) {
  .page-content {
    width: 80% !important;
  }

  .content {
    height: 100%;
    width: 100%;
    border: 1px solid black;
    border-color: black;
    border-width: 0px;
    border-radius: 10px;
    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
  }
  .sidebar {
    height: auto;
    border: 1px solid black;
    border-color: black;
    border-width: 0px;
    border-radius: 10px;
    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
  }

  .create-modal {
    position: absolute;
    top: 20vh;
    left: 25vw;
    right: 25vw;
    bottom: 20vh;
    background-color: White;
    border: 1px solid black;
    border-color: black;
    border-width: 0px;
    border-radius: 10px;
    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
  }
}

